feat: https://github.com/pierrelasse/Bamboo/issues/1, fix & update bossbar animation, update fibdev cmd